typescript_app: add enroll and register v2 endpoint
